tests/baselines/reference/for-of36.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of36.ts(2,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of36.ts (1 errors) ====
    var tuple: [string, boolean] = ["", true];
    for (var v of tuple) {
                  ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        v;
    }